--- a/index.html
+++ b/index.html
@@ -1,83 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport"
-      content="initial-scale=1.0, width=device-width"/>
-    <title>The Communicationist</title>
-<!--
-$$$$$$$$\                   $$\               
-$$  _____|                  $$ |              
-$$ |    $$$$$$\  $$$$$$$\ $$$$$$\    $$$$$$$\ 
-$$$$$\ $$  __$$\ $$  __$$\\_$$  _|  $$  _____|
-$$  __|$$ /  $$ |$$ |  $$ | $$ |    \$$$$$$\  
-$$ |   $$ |  $$ |$$ |  $$ | $$ |$$\  \____$$\ 
-$$ |   \$$$$$$  |$$ |  $$ | \$$$$  |$$$$$$$  |
-\__|    \______/ \__|  \__|  \____/ \_______/ 
-    -->
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
+  <title>The Communicationist</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Syncopate" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Spinnaker" rel="stylesheet">
+  <!--
+  $$$$$$$$\                   $$\               
+  $$  _____|                  $$ |              
+  $$ |    $$$$$$\  $$$$$$$\ $$$$$$\    $$$$$$$\ 
+  $$$$$\ $$  __$$\ $$  __$$\\_$$  _|  $$  _____|
+  $$  __|$$ /  $$ |$$ |  $$ | $$ |    \$$$$$$\  
+  $$ |   $$ |  $$ |$$ |  $$ | $$ |$$\  \____$$\ 
+  $$ |   \$$$$$$  |$$ |  $$ | \$$$$  |$$$$$$$  |
+  \__|    \______/ \__|  \__|  \____/ \_______/ 
+      -->
+  <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Syncopate" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Spinnaker" rel="stylesheet">
     
-<!--
-$$$$$$\   $$$$$$\   $$$$$$\  
-$$  __$$\ $$  __$$\ $$  __$$\ 
-$$ /  \__|$$ /  \__|$$ /  \__|
-$$ |      \$$$$$$\  \$$$$$$\  
-$$ |       \____$$\  \____$$\ 
-$$ |  $$\ $$\   $$ |$$\   $$ |
-\$$$$$$  |\$$$$$$  |\$$$$$$  |
- \______/  \______/  \______/ 
--->
-    <link rel="stylesheet" type="text/css" href="mystylesheet.css">
-
+  <!--
+  $$$$$$\   $$$$$$\   $$$$$$\  
+  $$  __$$\ $$  __$$\ $$  __$$\ 
+  $$ /  \__|$$ /  \__|$$ /  \__|
+  $$ |      \$$$$$$\  \$$$$$$\  
+  $$ |       \____$$\  \____$$\ 
+  $$ |  $$\ $$\   $$ |$$\   $$ |
+  \$$$$$$  |\$$$$$$  |\$$$$$$  |
+   \______/  \______/  \______/ 
+  -->
+  <link rel="stylesheet" type="text/css" href="mystylesheet.css">
+  <style>
+    body {
+      background-image: url("Imagery/tempBckgrnd1.jpg");
+      height: 100%;
+      background-repeat:no-repeat;
+    }
+    </style>
 </head>
+<body>
+  <div id="Container">
 
-<!--
-$$\      $$\           $$\           
-$$$\    $$$ |          \__|          
-$$$$\  $$$$ | $$$$$$\  $$\ $$$$$$$\  
-$$\$$\$$ $$ | \____$$\ $$ |$$  __$$\ 
-$$ \$$$  $$ | $$$$$$$ |$$ |$$ |  $$ |
-$$ |\$  /$$ |$$  __$$ |$$ |$$ |  $$ |
-$$ | \_/ $$ |\$$$$$$$ |$$ |$$ |  $$ |
-\__|     \__| \_______|\__|\__|  \__|
--->
+  <!--
+  _   _             ____             
+ | \ | |           |  _ \            
+ |  \| | __ ___   _| |_) | __ _ _ __ 
+ | . ` |/ _` \ \ / /  _ < / _` | '__|
+ | |\  | (_| |\ V /| |_) | (_| | |   
+ |_| \_|\__,_| \_/ |____/ \__,_|_|  
+  -->
+  	<div id="header">
+    <nav>
+      <ul>
+      <li><a href="digitalmedia.html" style="text-decoration:none">DIGITAL MEDIA</a></li>
+      <li><a href="writtenwork.html" style="text-decoration:none">WRITTEN WORK</a></li>
+      <li><a href="aboutme.html" style="text-decoration:none">ABOUT ME</a></li>
+      </ul>
+    </nav>
+    </div><!-- #header -->
 
-	<body>
-		<nav>
-    <ul>
-    <li><a href="digitalmedia.html" style="text-decoration:none">DIGITAL MEDIA</a></li>
-    <li><a href="writtenwork.html" style="text-decoration:none">WRITTEN WORK</a></li>
-    <li><a href="aboutme.html" style="text-decoration:none">ABOUT ME</a></li>
-    </ul>
-  </nav>
+   <!--
+    _                       
+   | |                      
+   | |     ___   __ _  ___  
+   | |    / _ \ / _` |/ _ \ 
+   | |___| (_) | (_| | (_) |
+   |______\___/ \__, |\___/ 
+                 __/ |      
+                |___/                     
+    -->
+    <a href="index.html"><img src="Imagery\newLogo-01.png" alt="Communicationist" height="400px" width="800px"></a>
 
-  <h1>THE COMMUNICATIONIST</h1>
-  <h3>Designer, Developer, Storyteller</h3>
+    <!--
+    __  __       _       
+   |  \/  |     (_)      
+   | \  / | __ _ _ _ __  
+   | |\/| |/ _` | | '_ \ 
+   | |  | | (_| | | | | |
+   |_|  |_|\__,_|_|_| |_|
+    -->
+    
 
-  <!-- 
-FFFFFFFFFFFFFFFFFFFFFF                                        tttt          
-F::::::::::::::::::::F                                     ttt:::t          
-F::::::::::::::::::::F                                     t:::::t          
-FF::::::FFFFFFFFF::::F                                     t:::::t          
-  F:::::F       FFFFFFooooooooooo      ooooooooooo   ttttttt:::::ttttttt    
-  F:::::F           oo:::::::::::oo  oo:::::::::::oo t:::::::::::::::::t    
-  F::::::FFFFFFFFFFo:::::::::::::::oo:::::::::::::::ot:::::::::::::::::t    
-  F:::::::::::::::Fo:::::ooooo:::::oo:::::ooooo:::::otttttt:::::::tttttt    
-  F:::::::::::::::Fo::::o     o::::oo::::o     o::::o      t:::::t          
-  F::::::FFFFFFFFFFo::::o     o::::oo::::o     o::::o      t:::::t          
-  F:::::F          o::::o     o::::oo::::o     o::::o      t:::::t          
-  F:::::F          o::::o     o::::oo::::o     o::::o      t:::::t    tttttt
-FF:::::::FF        o:::::ooooo:::::oo:::::ooooo:::::o      t::::::tttt:::::t
-F::::::::FF        o:::::::::::::::oo:::::::::::::::o      tt::::::::::::::t
-F::::::::FF         oo:::::::::::oo  oo:::::::::::oo         tt:::::::::::tt
-FFFFFFFFFFF           ooooooooooo      ooooooooooo             ttttttttttt  
- -->
+    <div id="aside">
 
-  <div class="footer"><div class="row"><h6>© Copyright 2016, All Rights Reserved</h6></div>
-<!-- End Footer -->
-	</body>
+      <h3>Designer, Developer, Storyteller</h3>
+
+     </div><!-- #aside -->
+
+    <div id="content">
+    </div><!-- #content -->
+  <!--
+    ______          _            
+   |  ____|        | |           
+   | |__ ___   ___ | |_ ___ _ __ 
+   |  __/ _ \ / _ \| __/ _ \ '__|
+   | | | (_) | (_) | ||  __/ |   
+   |_|  \___/ \___/ \__\___|_|
+   -->
+    <div id="footer">
+      <h5>© Copyright 2017, All Rights Reserved</h5>
+      <h6>This backgound image was taken from DellEMC (http://emeablog.emc.com/me/humanizingdigitaluniverse/)</h6>
+    </div><!-- End Footer -->
+
+</div><!-- #container -->    
+
+</body>
 </html>
