Update for Issues
Upload for Link issues

--- a/digitalmedia.html
+++ b/digitalmedia.html
@@ -41,7 +41,7 @@ $$ |  $$\ $$\   $$ |$$\   $$ |
  \______/  \______/  \______/ 
     -->
 
-    <link rel="stylesheet" type="text/css" href="mystylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/mystylesheet.css">
 
 <!--- End CSS -->
 
@@ -117,14 +117,14 @@ $$ |  $$\ $$\   $$ |$$\   $$ |
        `__. \ | | | '_ \| . ` |/ _` \ \ / /
       /\__/ / |_| | |_) | |\  | (_| |\ V / 
       \____/ \__,_|_.__/\_| \_/\__,_| \_/  
-      
+      -->
       <div class="nav2">
        <ul>
           <li><a href="contentcomingsoon.html">Graphic Design</a></li>
           <li><a href="contentcomingsoon.html">Layout &amp; Design</a></li>
           <li><a href="contentcomingsoon.html">Web Development</a></li>
         </ul>
-        </div><! SubNav -->
+        </div><!-- SubNav -->
 
     </div><!-- #header -->
 <!--
