--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   \$$$$$$  |\$$$$$$  |\$$$$$$  |
    \______/  \______/  \______/ 
   -->
-  <link rel="stylesheet" type="text/css" href="mystylesheet.css">
+  <link rel="stylesheet" type="text/css" href="css/mystylesheet.css">
 </head>
 
 <body>
