--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
     \$$$$$$  |\$$$$$$  |\$$$$$$  |
      \______/  \______/  \______/ 
         -->
-    <link rel="stylesheet" type="text/css" href="mystylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/mystylesheet.css">
 
 </head>
 <body>
@@ -100,7 +100,7 @@
       <div class=nav2>
         <ul>
           <li><a>PERSONAL HISTORY</a></li>
-          <li><a href="resume.html">RESUME</a></li>
+          <li><a href="supportingPages/resume.html">RESUME</a></li>
         </ul>
       </div><!-- nav2 end -->
 
