--- a/writtenwork.html
+++ b/writtenwork.html
@@ -41,7 +41,7 @@ $$ |  $$\ $$\   $$ |$$\   $$ |
  \______/  \______/  \______/ 
     -->
 
-    <link rel="stylesheet" type="text/css" href="mystylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/mystylesheet.css">
 
 <!--- End CSS -->
 
@@ -108,7 +108,7 @@ $$ |  $$\ $$\   $$ |$$\   $$ |
         -->
       <div class="nav2">
         <ul>
-          <li><a href="prologue.html">Prologue: A Tale of History</a></li>
+          <li><a href="supportingPages/thera/prologue.html">Prologue: A Tale of History</a></li>
         </ul>
       </div><!-- SubNav -->
 
