Updates for Site Validation
Some files for upload are for JS class and are not incorporated into
main site

--- a/digitalmedia.html
+++ b/digitalmedia.html
@@ -41,7 +41,7 @@ $$ |  $$\ $$\   $$ |$$\   $$ |
  \______/  \______/  \______/ 
     -->
 
-    <link rel="stylesheet" type="text/css" href="css/mystylesheet.css">
+    <link rel="stylesheet" type="text/css" href="mystylesheet.css">
 
 <!--- End CSS -->
 
@@ -94,7 +94,7 @@ $$ |  $$\ $$\   $$ |$$\   $$ |
                     __/ |      
                    |___/ -->
 
-      <div class="logo"><a href="index.html"><img src="Imagery\newLogo-01.png" alt="Communicationist" height="300px" width="600px"></a></div>
+      <div class="logo"><a href="index.html"><img src="Imagery/Logo01.png" alt="Communicationist"></a></div>
 
       <!--
        _______          _ _            
@@ -118,13 +118,15 @@ $$ |  $$\ $$\   $$ |$$\   $$ |
       /\__/ / |_| | |_) | |\  | (_| |\ V / 
       \____/ \__,_|_.__/\_| \_/\__,_| \_/  
       -->
+
+      <!--
       <div class="nav2">
        <ul>
           <li><a href="contentcomingsoon.html">Graphic Design</a></li>
           <li><a href="contentcomingsoon.html">Layout &amp; Design</a></li>
           <li><a href="contentcomingsoon.html">Web Development</a></li>
         </ul>
-        </div><!-- SubNav -->
+        </div>< SubNav -->
 
     </div><!-- #header -->
 <!--
@@ -139,7 +141,7 @@ $$ |  $$\ $$\   $$ |$$\   $$ |
     <div id="content">
 
       <!-- Poster Image -->
-      <div class="aside"><div class="poster"><img src="Imagery/DigitalMedia-poster.jpg"></div></div>
+      <div class="aside"><div class="poster"><img src="Imagery/DigitalMedia-poster.jpg" alt="moviePoster"></div></div>
       
       <div class="paragraph">Not everyone knows what they want to be when they grow up. With me, I didn’t know that I knew it. Or perhaps I was just waiting for technology catch up to my imagination. I have always loved television, movies, games, and have been fascinated with advances in technology that help bring these genres together. This is what interests me so much about digital media.
       <p>
