--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
   <title>The Communicationist</title>
@@ -31,7 +31,7 @@
   \$$$$$$  |\$$$$$$  |\$$$$$$  |
    \______/  \______/  \______/ 
   -->
-  <link rel="stylesheet" type="text/css" href="css/mystylesheet.css">
+  <link rel="stylesheet" type="text/css" href="mystylesheet.css">
 </head>
 
 <body>
@@ -83,7 +83,7 @@
                     |___/                     
       -->
 
-      <div class="logo"><a href="index.html"><img src="Imagery\newLogo-01.png" alt="Communicationist" height="400px" width="800px"></a></div>
+      <div class="logo"><a href="index.html"><img src="Imagery/Logo01.png" alt="Communicationist"></a></div>
 
       <!--
        _______          _ _            
